--- a/TCC-ETEC-main/package.json
+++ b/TCC-ETEC-main/package.json
@@ -26,7 +26,10 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-image-crop-picker": "^0.40.3",
     "react-native-modal-datetime-picker": "^17.1.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "typescript": "~5.3.3",
+    "@types/react": "~18.2.79",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
