--- a/TCC-ETEC-main/package.json
+++ b/TCC-ETEC-main/package.json
@@ -29,7 +29,8 @@
     "react-native-web": "~0.19.6",
     "typescript": "~5.3.3",
     "@types/react": "~18.2.79",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "expo-image-manipulator": "~12.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
